[package]
name = "eve_tele"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.25.0", features = ["persistence"] }
serialport = "4.2.2"
hex = "0.4.3"
mcap = "0.9.0"
foxglove-ws = "0.2.2"
tokio = { version = "1.35.1", features = ["full"] }
anyhow = "1.0.79"
rfd = "0.13.0"
csv = "1.3.0"
canparse = { git = "https://github.com/ChanceCtrl/better_canparse", brach = "master" }
protobuf = "3.3.0"
protobuf-parse = "3.3.0"
tempfile = "3"
byteorder = "1.5.0"
